--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
 	"main": "server.js",
 	"scripts": {
 		"start": "node api/server.js",
-		"server": "nodemon api/server.js"
+		"server": "nodemon api/server.js",
+		"server:prod": "NODE_ENV=production nodemon api/server.js"
 	},
 	"keywords": [
 		"pubg-tournament",
@@ -16,6 +17,7 @@
 	"dependencies": {
 		"dotenv": "^8.2.0",
 		"express": "^4.16.4",
+		"mongoose": "^5.11.11",
 		"morgan": "^1.10.0",
 		"nodemon": "^2.0.7"
 	}
